1998-07-12  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (ann-id): Write the test so that it tests for the
	current (buggy) behavior.

	* sanity.sh (taginfo): Also clean up cvsroot/first-dir.

1998-07-12  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (ann-id): New (currently failing) test for bug in how
	rcs keywords are expanded in the output of `cvs annotate'.

1998-07-12  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (taginfo): Write the TESTDIR into the script rather
	than having the script look at the environment.  This means that
	it will work if TESTDIR is set by sanity.sh as well as if
	sanity.sh finds TESTDIR in the environment.

1998-07-11  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* tag.c (check_fileproc): Calculate the revision to be tagged the
	same way that tag_fileproc does.
	* sanity.sh (taginfo): New tests, test for this (before this fix,
	brtag had said 1.1 not 1.1.2.1).

1998-07-10  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Also clean up "2" directory.

1998-07-08  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* edit.c (unedit_fileproc): If the Baserev file is missing, don't
	get the working file from CVS/Base.  The previous code could get
	you version 1.1 of the working file and put 1.2 in CVS/Entries.
	* sanity.sh (unedit-without-baserev): New tests test for this.

1998-07-02  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Move the test itself to be
	in the same order as in the "tests" variable.

1998-07-02  Ian Lance Taylor  <ian@cygnus.com>

	* rcscmds.c: Don't include <stdarg.h> or <vasprintf.h>.  Don't
	declare vasprintf.
	(call_diff_printf_output): Remove.
	(call_diff_stdout_callbacks): Don't initialize printf_output
	field--it has been removed from the interface.
	(call_diff_file_callbacks): Likewise.

1998-07-01  Jim Meyering  <meyering@ascend.com>

	* edit.c (unedit_fileproc): Handle the case in which base_get